min-height fix for IE 11. Still working on vertical alignments for IE 11.

--- a/src/blocks/block-column-container/styles/style.scss
+++ b/src/blocks/block-column-container/styles/style.scss
@@ -22,6 +22,18 @@
 	display: -ms-grid;
 	display: grid;
 	position: relative;
+	-ms-grid-columns: 100%;
+
+	/* IE 11 min-height flexbox bug fix */
+	@media all and (-ms-high-contrast: none),
+	(-ms-high-contrast: active) {
+		&:after {
+			content: "";
+			display: block;
+			min-height: inherit;
+			font-size: 0;
+		}
+	}
 
 	@media (max-width: 667px) {
 		.c9-image-mobile-size-custom {
